--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,39 @@
 @import "tailwindcss";
 @plugin "daisyui";
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
+
+body{
+     font-family: "Poppins", sans-serif;
+}
+
+.btn1{
+    background: #29d409;
+    color: white;
+}
+
+.btn2{
+    color: #29d409;
+    border-color: #29d409;
+}
+.btn2:hover{
+     background:#f8b02f;
+     color: black;
+}
+.btn1:hover{
+    background: #f8b02f; 
+    color: black;
+}
+
+.primary{
+    color: #152525;
+}
+.secondary{
+    color: #373d48;
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+  color: #225727 !important; 
+}
